--- a/app/src/main/res/layout-w900dp/items_list.xml
+++ b/app/src/main/res/layout-w900dp/items_list.xml
@@ -20,7 +20,7 @@
 
     <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/items_list"
+        android:id="@+id/Brew_History"
         android:name="com.example.beer_app.ItemsListFragment"
         android:layout_width="@dimen/item_width"
         android:layout_height="match_parent"
