--- a/app/src/main/res/layout/activity_items_list.xml
+++ b/app/src/main/res/layout/activity_items_list.xml
@@ -27,16 +27,8 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <include layout="@layout/items_list" />
+        <androidx.coordinatorlayout.widget.CoordinatorLayout />
     </FrameLayout>
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
