--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     tools:context=".MainActivity">
 
     <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
@@ -14,20 +15,124 @@
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
+            android:layout_height="match_parent"
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <include layout="@layout/content_main" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        <Button
+            android:id="@+id/Home"
+            android:layout_width="122dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="92dp"
+            android:elevation="@dimen/activity_horizontal_margin"
+            android:text="Home"
+            android:textAlignment="center"
+            android:typeface="sans"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/home2"
+            android:layout_width="122dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:elevation="@dimen/activity_horizontal_margin"
+            android:text="Create New"
+            android:textAlignment="center"
+            android:typeface="sans"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/Home" />
+
+        <Button
+            android:id="@+id/home3"
+            android:layout_width="122dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:elevation="@dimen/activity_horizontal_margin"
+            android:text="Reminders"
+            android:textAlignment="center"
+            android:typeface="sans"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/home2" />
+
+        <Button
+            android:id="@+id/home4"
+            android:layout_width="122dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:elevation="@dimen/activity_horizontal_margin"
+            android:text="Current"
+            android:textAlignment="center"
+            android:typeface="sans"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/home3" />
+
+        <Button
+            android:id="@+id/home5"
+            android:layout_width="122dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:elevation="@dimen/activity_horizontal_margin"
+            android:text="Brew History"
+            android:textAlignment="center"
+            android:typeface="sans"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/home4" />
+
+        <Button
+            android:id="@+id/home6"
+            android:layout_width="122dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:elevation="@dimen/activity_horizontal_margin"
+            android:text="Logout"
+            android:textAlignment="center"
+            android:typeface="sans"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/home5" />
+
+        <ScrollView
+            android:id="@+id/scrollView2"
+            android:layout_width="263dp"
+            android:layout_height="424dp"
+            android:layout_marginTop="156dp"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/textView4"
+                    android:layout_width="270dp"
+                    android:layout_height="63dp"
+                    android:text="Welcome, User!"
+                    android:textAlignment="center" />
+
+            </LinearLayout>
+        </ScrollView>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="217dp"
+        android:layout_height="31dp"
+        android:text="Homebrew Helper"
+        android:textAlignment="center"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:typeface="normal"
+        app:layout_anchor="@+id/appBarLayout"
+        app:layout_anchorGravity="center" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
