--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -6,51 +6,4 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".MainActivity"
-    tools:showIn="@layout/activity_main">
-
-    <Button
-        android:id="@+id/Home_Button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="#9E932B"
-        android:text="Home"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/New_Button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="#9E932B"
-        android:text="Create New"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Home_Button" />
-
-    <Button
-        android:id="@+id/Current_Beer_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="#9E932B"
-        android:text="Current"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/New_Button" />
-
-    <Button
-        android:id="@+id/History_Button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="#9E932B"
-        android:text="History"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Current_Beer_button" />
-
-    <Button
-        android:id="@+id/Logout_Button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="#9E932B"
-        android:text="logout"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/History_Button" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    tools:showIn="@layout/activity_main" />
