--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,138 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:fitsSystemWindows="true"
+    tools:context=".MainActivity"
+    tools:openDrawer="start">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appBarLayout"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <androidx.appcompat.widget.Toolbar
+        <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            android:layout_height="?attr/actionBarSize"
+            android:background="#FFFFFF"
+            android:elevation="4dp"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
-    </com.google.android.material.appbar.AppBarLayout>
+        <FrameLayout
+            android:id="@+id/fragment_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    </LinearLayout>
 
-        <Button
-            android:id="@+id/Home"
-            android:layout_width="122dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="92dp"
-            android:elevation="@dimen/activity_horizontal_margin"
-            android:text="Home"
-            android:textAlignment="center"
-            android:typeface="sans"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="@drawable/barrel_background"
+        app:headerLayout="@layout/nav_header"
+        app:menu="@menu/draw_menu"
+        android:theme="@style/NavigationDrawerStyle"
+        />
 
-        <Button
-            android:id="@+id/home2"
-            android:layout_width="122dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:elevation="@dimen/activity_horizontal_margin"
-            android:text="Create New"
-            android:textAlignment="center"
-            android:typeface="sans"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/Home" />
-
-        <Button
-            android:id="@+id/home3"
-            android:layout_width="122dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:elevation="@dimen/activity_horizontal_margin"
-            android:text="Reminders"
-            android:textAlignment="center"
-            android:typeface="sans"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/home2" />
-
-        <Button
-            android:id="@+id/home4"
-            android:layout_width="122dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:elevation="@dimen/activity_horizontal_margin"
-            android:text="Current"
-            android:textAlignment="center"
-            android:typeface="sans"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/home3" />
-
-        <Button
-            android:id="@+id/home5"
-            android:layout_width="122dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:elevation="@dimen/activity_horizontal_margin"
-            android:text="Brew History"
-            android:textAlignment="center"
-            android:typeface="sans"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/home4" />
-
-        <Button
-            android:id="@+id/home6"
-            android:layout_width="122dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:elevation="@dimen/activity_horizontal_margin"
-            android:text="Logout"
-            android:textAlignment="center"
-            android:typeface="sans"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/home5" />
-
-        <ScrollView
-            android:id="@+id/scrollView2"
-            android:layout_width="263dp"
-            android:layout_height="424dp"
-            android:layout_marginTop="156dp"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/textView4"
-                    android:layout_width="270dp"
-                    android:layout_height="63dp"
-                    android:text="Welcome, User!"
-                    android:textAlignment="center" />
-
-            </LinearLayout>
-        </ScrollView>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="217dp"
-        android:layout_height="31dp"
-        android:text="Homebrew Helper"
-        android:textAlignment="center"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:typeface="normal"
-        app:layout_anchor="@+id/appBarLayout"
-        app:layout_anchorGravity="center" />
-
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
