--- a/app/src/main/res/menu/draw_menu.xml
+++ b/app/src/main/res/menu/draw_menu.xml
@@ -9,6 +9,9 @@
             android:id="@+id/nav_home"
             android:title="Home"/>
         <item
+            android:id="@+id/nav_profile"
+            android:title="My Profile" />
+        <item
             android:id="@+id/nav_create_new"
             android:title="Create New" />
         <item
