--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -12,7 +12,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/barrel_background_3"
+            android:background="@drawable/barrel_background"
             android:gravity="center_horizontal|top"
             android:orientation="vertical">
 
@@ -27,7 +27,7 @@
                     android:layout_height="150dp"
                     android:contentDescription="@string/user_profile_name"
                     android:padding="25dp"
-                    app:srcCompat="@drawable/blank_profile" />
+                    app:srcCompat="@drawable/barrel_color" />
 
                 <TextView
                     android:id="@+id/textView10"
@@ -51,7 +51,7 @@
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/separator"
                 android:paddingTop="20dp"
-                app:srcCompat="@drawable/separator" />
+                app:srcCompat="@drawable/seperator" />
 
             <TextView
                 android:id="@+id/textView9"
@@ -77,7 +77,7 @@
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/separator"
                 android:paddingTop="20dp"
-                app:srcCompat="@drawable/separator" />
+                app:srcCompat="@drawable/seperator" />
 
             <TextView
                 android:id="@+id/textView12"
