--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,9 +7,9 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:context=".MainActivity"
-
+    tools:openDrawer="start"
     >
-    <!-- tools:openDrawer="start"  -->
+    <!--   -->
 
     <LinearLayout
         android:layout_width="match_parent"
