--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -19,6 +19,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:gravity="center"
                 android:orientation="horizontal">
 
                 <ImageView
@@ -27,31 +28,25 @@
                     android:layout_height="150dp"
                     android:contentDescription="@string/user_profile_name"
                     android:padding="25dp"
-                    app:srcCompat="@drawable/barrel_color" />
+                    app:srcCompat="@mipmap/beer_launcher_3" />
 
                 <TextView
                     android:id="@+id/textView10"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingTop="20dp"
+                    android:fontFamily="@font/fondamento"
+                    android:paddingBottom="33dp"
                     android:text="@string/user_profile_name"
+                    android:textColor="@color/Beer_Launcher_background"
                     android:textSize="40sp" />
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/textView14"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/user_profile_info"
-                android:textSize="50sp" />
-
             <ImageView
-                android:id="@+id/imageView3"
+                android:id="@+id/imageView5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/separator"
-                android:paddingTop="20dp"
-                app:srcCompat="@drawable/seperator" />
+                app:srcCompat="@drawable/separator" />
 
             <TextView
                 android:id="@+id/textView9"
@@ -65,10 +60,13 @@
                 android:textSize="30sp" />
 
             <TextView
-                android:id="@+id/textView11"
+                android:id="@+id/textView21"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/fondamento"
                 android:text="@string/main_current_beers"
+                android:textAlignment="center"
+                android:textColor="@color/Beer_Launcher_background"
                 android:textSize="33sp" />
 
             <ImageView
@@ -77,7 +75,7 @@
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/separator"
                 android:paddingTop="20dp"
-                app:srcCompat="@drawable/seperator" />
+                app:srcCompat="@drawable/separator" />
 
             <TextView
                 android:id="@+id/textView12"
@@ -94,8 +92,11 @@
                 android:id="@+id/textView13"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/fondamento"
                 android:text="@string/user_profile_finished_beers"
-                android:textSize="38sp" />
+                android:textAlignment="center"
+                android:textColor="@color/Beer_Launcher_background"
+                android:textSize="33sp" />
 
         </LinearLayout>
     </ScrollView>
