Created Transitions between each fragment

--- a/app/src/main/res/layout/brewing_tutorial_fragment.xml
+++ b/app/src/main/res/layout/brewing_tutorial_fragment.xml
@@ -32,12 +32,12 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.448">
+        app:layout_constraintVertical_bias="0.384">
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/brew_tutorial"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"/>
+            android:layout_height="wrap_content" />
     </ScrollView>
 
     <Button
