--- a/app/src/main/res/layout/activity_create_new.xml
+++ b/app/src/main/res/layout/activity_create_new.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/CreateNew"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -57,6 +57,12 @@
                     android:visibility="visible" />
 
             </RelativeLayout>
+
+            <Button
+                android:id="@+id/Start_Tutorial_Button"
+                android:layout_width="113dp"
+                android:layout_height="wrap_content"
+                android:text="@string/Start_Brew" />
 
         </LinearLayout>
     </ScrollView>
