Split Tutorial into 3 fragments, Brewing, Fermenting, Bottling

--- a/app/src/main/res/layout/brewing_tutorial_fragment.xml
+++ b/app/src/main/res/layout/brewing_tutorial_fragment.xml
@@ -6,20 +6,22 @@
     android:layout_height="match_parent"
     android:background="@drawable/barrel_background_4">
 
-    <TextView
-        android:id="@+id/TutorialTitle"
-        android:layout_width="338dp"
-        android:layout_height="75dp"
-        android:layout_marginBottom="48dp"
-        android:text="@string/TutorialTitle"
-        android:textAlignment="center"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.493"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/TutorialTitle"
+            android:layout_width="match_parent"
+            android:layout_height="75dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginBottom="48dp"
+            android:text="@string/TutorialTitle"
+            android:textAlignment="center"
+            android:textSize="30sp"
+            android:textStyle="bold" />
+    </LinearLayout>
 
     <ScrollView
         android:id="@+id/scrollView2"
@@ -32,12 +34,13 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.384">
+        app:layout_constraintVertical_bias="0.531">
 
         <TextView
             android:id="@+id/brew_tutorial"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:text="@string/Test" />
     </ScrollView>
 
     <Button
@@ -51,6 +54,16 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/scrollView2"
-        app:layout_constraintVertical_bias="0.312" />
+        app:layout_constraintVertical_bias="0.717" />
+
+    <Button
+        android:id="@+id/toFermentingTutorial"
+        android:layout_width="228dp"
+        android:layout_height="60dp"
+        android:text="@string/toFermentingTutorial"
+        app:layout_constraintBottom_toTopOf="@+id/FinishButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
